--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <div class="portfolio-item">
                             <img src="https://imgur.com/f39Eur6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>summit's hair tip of the day</h4>
+                                <h4>Summit's hair tip of the day</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="https://assistant.google.com/services/a/uid/000000ae52c6863b?hl=en" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -358,7 +358,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/Iaf3sMu.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Pinellas Computers</h4>
@@ -376,7 +376,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/tiNhieO.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Raghavendra Rathore Jodhpur</h4>
@@ -394,7 +394,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/CgzEIC7.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Plexuss College Answers</h4>
@@ -412,7 +412,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/VnzCZ5y.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Moms Blog</h4>
@@ -430,7 +430,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/tWvxm7o.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Spedifort</h4>
@@ -448,7 +448,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+            <img class="img-res" src="https://imgur.com/f39Eur6.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Summit's hair tip of the day</h4>
